--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,7 +59,7 @@ import Layout from '../components/layout.astro';
 </style>
 
 <Layout
-  title="Netlify Feature Tour"
+  title="Netlify Feature Tournhhhhhh"
   description="This is a small site to show the most powerful features of Netlify quickly!"
   home
 >
